[tool.poetry]
name = "automatic-carnival"
version = "0.1.0"
description = ""
authors = ["Guillermo Enrique Sánchez de Abreu <naselliug@gmail.com>"]
readme = "README.md"
packages = [{include = "automatic_carnival"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
